[bdist_wheel]
universal=1

[metadata]
name = cardpydentity
version = 0.1.0

description = Python package for identifying Pokemon/MTG cards from auction titles
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin Perkins
url = https://github.com/bapcon/cardpydentity
authoremail = benjaminperkins98@gmail.com
license = MIT
copyright = Copyright 2024 Benjamin Perkins
keywords = collectibles, identifier, pokemon, magic the gathering
classifiers =
    Intended Audience :: Developers 
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
packages = find:
install_requires =
    fuzzywuzzy
    python-Levenshtein
    appdirs
    requests